--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-torch==2.5.1
-torchvision==0.20.1
---extra-index-url https://download.pytorch.org/whl/cu121
-diffusers==0.32.2
-transformers==4.48.0
+torch==2.7.1+cu128
+--extra-index-url https://download.pytorch.org/whl/cu128
+torchvision==0.22.1+cu128
+--extra-index-url https://download.pytorch.org/whl/cu128
+diffusers==0.33.1
+transformers==4.52.4
 decord==0.6.0
 accelerate==0.26.1
 einops==0.7.0
 omegaconf==2.3.0
-opencv-python==4.9.0.80
-mediapipe==0.10.11
+opencv-python==4.11.0.86
+mediapipe==0.10.21
 python_speech_features==0.6
-librosa==0.10.1
-scenedetect==0.6.1
+librosa==0.11.0
+scenedetect==0.6.6
 ffmpeg-python==0.2.0
 imageio==2.31.1
 imageio-ffmpeg==0.5.1
 lpips==0.1.4
 face-alignment==1.4.1
 gradio==5.24.0
-huggingface-hub==0.30.2
+huggingface-hub==0.32.4
 numpy==1.26.4
-kornia==0.8.0
+kornia==0.8.1
 insightface==0.7.3
-onnxruntime-gpu==1.21.0
+onnxruntime-gpu==1.22.0
